# aizo_projekt1

./: CMakeLists.txt
data/: config.txt  dane.txt
program/src/: Aplikacja.h  Generowanie.h  Konfiguracja.cpp  Konfiguracja.h  ObslugaPlikow.h  ObslugaWynikow.h  Sortowanie.h  main.cpp
